Add :     - IMG :         - Ajout des 6 faces du dés + une face par défaut. Changes :     - Html :         - Remplacement des liens par des buttons pour éviter les refresh de pages.         - Mise en place du jeu terminé pour le moment.     - Css :         - Modification des styles et réajustement des noms.

--- a/index.html
+++ b/index.html
@@ -46,20 +46,24 @@
                 </div>
             </div>
 
+            <button class="new-game-button">
+                <i class="icons ion-ios-plus-outline"></i>
+                <h3>NEW GAME</h3>
+            </button>
             
             <div class="action-button">
-                <div class="new-game-button">
-                    <i class="icons ion-ios-plus-outline"></i>
-                    <h3>NEW GAME</h3>
-                </div>
-                <div class="roll-dice">
+                <button class="roll-dice">
                     <i class="icons ion-ios-loop"></i>
                     <p>ROLL DICE</p>
-                </div>
-                <div class="hold">
+                </button>
+                <button class="hold">
                     <i class="icons ion-ios-download-outline"></i>
                     <p>HOLD</p>
-                </div>
+                </button>
+            </div>
+
+            <div class="dice">
+                <img src="./SRC/IMG/dice-0.png" alt="Dé" />
             </div>
         </div>
     </div>
