Add:     - JS :         - Ajout du fichier mains.js qui contient la logique du jeu     - Ajout de classe et D'id pour mieux modifier le Dom grace au JS.     - Ajout d'un style sur la classe active et un ::after apres le nom pour ajouter un point et reperer le joueur actuel.

--- a/index.html
+++ b/index.html
@@ -16,33 +16,31 @@
 
             <div class="player-1">
                 <div class="player-turn">
-                    <h2>PLAYER 1</h2>
-                    <div class="dot"></div>
+                    <h2 id="player-1-name" class="name">PLAYER 1</h2>
                 </div>
                 <div class="round-points">
                     <div class="p_one">
-                        <p>43</p>
+                        <p class="global-score-1">43</p>
                     </div>
                 </div>
                 <div class="player-global-point one_global">
                     <p>Current</p>
-                    <p>11</p>
+                    <p id="current-score-1">11</p>
                 </div>
             </div>
 
             <div class="player-2">
                 <div class="player-turn">
-                    <h2>PLAYER 2</h2>
-                    <div class="dot"></div>
+                    <h2 id="player-2-name" class="name">PLAYER 2</h2>
                 </div>
                 <div class="round-points">
-                    <div class="p_one">
-                        <p>72</p>
+                    <div class="p_two">
+                        <p class="global-score-2">72</p>
                     </div>
                 </div>
-                <div class="player-global-point one_global">
+                <div class="player-global-point two_global">
                     <p>Current</p>
-                    <p>13</p>
+                    <p id="current-score-2">13</p>
                 </div>
             </div>
 
@@ -67,5 +65,6 @@
             </div>
         </div>
     </div>
+    <script src="./SRC/JS/main.js"></script>
 </body>
 </html>
