Changes :     - Traduction Française.     - Modification de classes - Id.

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                     </div>
                 </div>
                 <div class="player-global-point one_global">
-                    <p>Current</p>
+                    <p>Actuel</p>
                     <p id="current-score-1">11</p>
                 </div>
             </div>
@@ -39,24 +39,24 @@
                     </div>
                 </div>
                 <div class="player-global-point two_global">
-                    <p>Current</p>
+                    <p>Actuel</p>
                     <p id="current-score-2">13</p>
                 </div>
             </div>
 
             <button class="new-game-button">
                 <i class="icons ion-ios-plus-outline"></i>
-                <h3>NEW GAME</h3>
+                <h3>Nouvelle Partie</h3>
             </button>
             
             <div class="action-button">
                 <button class="roll-dice">
                     <i class="icons ion-ios-loop"></i>
-                    <p>ROLL DICE</p>
+                    <p>Jetter le dé</p>
                 </button>
                 <button class="hold">
                     <i class="icons ion-ios-download-outline"></i>
-                    <p>HOLD</p>
+                    <p>Garder</p>
                 </button>
             </div>
 
@@ -66,5 +66,6 @@
         </div>
     </div>
     <script src="./SRC/JS/main.js"></script>
+    <script src="./SRC/JS/init.js"></script>
 </body>
 </html>
